[gd_scene load_steps=3 format=3 uid="uid://c3o1j4v8xyswq"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_0vmxj"]
[ext_resource type="Script" path="res://scripts/character_audio_player.gd" id="1_njvow"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0vmxj")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.5
offset_right = 35.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TestAudioPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("1_njvow")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SOUND EFFECTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
max_value = 1.0
step = 0.1
value = 1.0
tick_count = 11

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0
text = "BACK"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
